fix #3: remove extra space in navbar on small screens

--- a/app/styles/components/_navbar.scss
+++ b/app/styles/components/_navbar.scss
@@ -2,4 +2,17 @@
   z-index: 1;
 
   box-shadow: 0 0 3px 0 $gray-base;
+
+  button {
+    margin-top: 7px;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: $screen-lg-min){
+  .navbar {
+    button {
+      margin-top: 12px;
+    }
+  }
 }
